style upgrade again

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,6 +7,10 @@ import Layout from "../layouts/Layout.astro";
 ---
 
 <Layout>
-  <h1 class="text-center text-3xl font-bold my-5">Trade Hub</h1>
-  <PositionCalculator client:load />
+  <h1 class="text-center text-3xl font-bold text-white my-5">
+    Cotties Trade Hub 📈
+  </h1>
+  <div class="">
+    <PositionCalculator client:load />
+  </div>
 </Layout>
